OPIK-3018 feature toggle

--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -422,6 +422,9 @@ serviceToggles:
   # Default: false
   # Description: Whether or not Dashboards feature is enabled
   dashboardsEnabled: "false"
+  # Default: true for testing
+  # Description: Whether or not dataset versioning feature is enabled
+  datasetVersioningEnabled: "true"
 
 # Trace Thread configuration
 traceThreadConfig:
