--- a/deployment/docker-compose/docker-compose.yaml
+++ b/deployment/docker-compose/docker-compose.yaml
@@ -188,7 +188,8 @@ services:
 
   python-backend:
     image: ghcr.io/comet-ml/opik/opik-python-backend:${OPIK_VERSION:-latest}
-    pull_policy: always
+    # change to 'build' when developing python-backend
+    pull_policy: ${PYTHON_BACKEND_PULL_POLICY:-always}
     profiles:
       - backend
       - opik
@@ -208,6 +209,15 @@ services:
       OPIK_VERSION: ${OPIK_VERSION:-latest}
       OPIK_REVERSE_PROXY_URL: ${OPIK_REVERSE_PROXY_URL:-http://frontend:5173/api}
       PYTHON_BACKEND_PORT: ${PYTHON_BACKEND_PORT:-8000}
+      # LLM API Keys for Optimizer
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY:-}
+      OPENROUTER_API_KEY: ${OPENROUTER_API_KEY:-}
+      # Redis Configuration
+      REDIS_URL: redis://:opik@redis:6379/0
+      RQ_WORKER_ENABLED: ${RQ_WORKER_ENABLED:-true}
+      # Opik SDK Configuration
+      OPIK_URL_OVERRIDE: ${OPIK_URL_OVERRIDE:-http://backend:8080}
     healthcheck:
       test: [ "CMD", "sh", "-c", "if [ -f /opt/opik-python-backend/src/opik_backend/healthcheck.py ]; then wget --spider --quiet http://127.0.0.1:$${PYTHON_BACKEND_PORT:-8000}/healthcheck; else exit 0; fi" ]
       interval: 2s
