--- a/apps/opik-frontend/nginx/templates/json-log.conf.template
+++ b/apps/opik-frontend/nginx/templates/json-log.conf.template
@@ -21,7 +21,7 @@ log_format logger-json escape=json '{'
                 ', "user_agent": "$http_user_agent"'
                 ', "x_forwarded_for": "$http_x_forwarded_for"'
                 ', "x_sdk_version": "$http_x_opik_debug_sdk_version"'
-                ${OTEL_COMMENT_OUT}', "otel_trace_id": "$otel_trace_id"'
+                ', "otel_trace_id": "$otel_trace_id"'
                 ', "upstream_connect_time": "$upstream_connect_time", "upstream_header_time": "$upstream_header_time", "upstream_response_time": "$upstream_response_time"'
                 ', "upstream_addr": "$upstream_addr", "upstream_status": "$upstream_status", "host": "$host"'
             '}';
