--- a/deployment/docker-compose/nginx_default_local.conf
+++ b/deployment/docker-compose/nginx_default_local.conf
@@ -1,37 +1,38 @@
 
 client_header_buffer_size 16k;
 large_client_header_buffers 4 64k;
+# Resolver allows nginx to re-resolve DNS periodically (every 30s)
+# This allows nginx to start even if backend service is not yet available
+# Docker's internal DNS resolver is typically at 127.0.0.11
+resolver 127.0.0.11 valid=30s;
+resolver_timeout 2s;
 
+upstream backend {
+    zone backend 64k;
+    server backend:8080 resolve;
+    keepalive 16;
+}
 server {
     listen ${NGINX_PORT};
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # Resolver allows nginx to re-resolve DNS periodically (every 30s)
-    # This allows nginx to start even if backend service is not yet available
-    # Docker's internal DNS resolver is typically at 127.0.0.11
-    resolver 127.0.0.11 valid=30s;
-    resolver_timeout 5s;
 
     # Dedicated healthcheck endpoint
     # Returns 200 OK if nginx is running and can serve requests
     location /health {
+        add_header Content-Type text/plain;
         access_log off;
         return 200 "healthy\n";
-        add_header Content-Type text/plain;
     }
 
     # Increased to 2GB to support large CSV uploads (OPIK-3077)
     client_max_body_size 2G;
 
-    location /api/ {
-        # Use variable with resolver to defer DNS resolution to request time
-        # This allows nginx to start even if backend service is not yet available
-        # The resolver directive above enables periodic DNS re-resolution
-        set $backend_upstream "http://backend:8080";
+    location @api {
         rewrite /api/(.*) /$1  break;
-        proxy_pass $backend_upstream;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,6 +45,10 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+
+    location /api/ {
+        try_files /dev/null @api;
     }
 
     location / {
