--- a/deployment/docker-compose/nginx_default_otel.conf
+++ b/deployment/docker-compose/nginx_default_otel.conf
@@ -2,42 +2,43 @@
 client_header_buffer_size 16k;
 large_client_header_buffers 4 64k;
 
+# Resolver allows nginx to re-resolve DNS periodically (every 30s)
+# This allows nginx to start even if backend service is not yet available
+# Docker's internal DNS resolver is typically at 127.0.0.11
+resolver 127.0.0.11 valid=30s;
+resolver_timeout 2s;
+
+upstream backend {
+    zone backend 64k;
+    server backend:8080 resolve;
+    keepalive 16;
+}
 server {
     listen ${NGINX_PORT};
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # Resolver allows nginx to re-resolve DNS periodically (every 30s)
-    # This allows nginx to start even if backend service is not yet available
-    # Docker's internal DNS resolver is typically at 127.0.0.11
-    resolver 127.0.0.11 valid=30s;
-    resolver_timeout 5s;
-
     # Dedicated healthcheck endpoint
     # Returns 200 OK if nginx is running and can serve requests
     location /health {
-        access_log off;
-        return 200 "healthy\n";
         add_header Content-Type text/plain;
-        ${OTEL_COMMENT_OUT}otel_trace off;
+        access_log off;
+        otel_trace off;
+        return 200 "healthy\n";
     }
 
     # Increased to 2GB to support large CSV uploads (OPIK-3077)
     client_max_body_size 2G;
 
     location @api {
-        # Use variable with resolver to defer DNS resolution to request time
-        # This allows nginx to start even if backend service is not yet available
-        # The resolver directive above enables periodic DNS re-resolution
-        set $backend_upstream "http://backend:8080";
         rewrite /api/(.*) /$1  break;
-        proxy_pass $backend_upstream;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        ${OTEL_COMMENT_OUT}proxy_set_header X-Trace-ID $otel_trace_id;
+        proxy_set_header X-Trace-ID $otel_trace_id;
 
         proxy_read_timeout 90;
         proxy_connect_timeout 90;
@@ -56,5 +57,5 @@ server {
     }
 
     # Add trace ID header for OpenTelemetry
-    ${OTEL_COMMENT_OUT}add_header X-Trace-ID $otel_trace_id;
+    add_header X-Trace-ID $otel_trace_id;
 }
