--- a/deployment/helm_chart/opik/values.yaml
+++ b/deployment/helm_chart/opik/values.yaml
@@ -282,7 +282,7 @@ component:
       requests:
         ephemeral-storage: 10Gi
     volumeMounts:
-    - mountPath: /etc/nginx/conf.d/
+    - mountPath: /etc/nginx/templates/
       name: opik-frontend-nginx
     volumes:
     - name: opik-frontend-nginx
@@ -290,7 +290,7 @@ component:
         name: opik-frontend-nginx
         items:
         - key: default.conf
-          path: default.conf
+          path: default.conf.template
     service:
       type: ClusterIP
       ports:
