--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -69,7 +69,7 @@ Infrastructure:
       - 'deployment/**/*'
       - 'scripts/**/*'
       - 'extensions/**/*'
-      - '**/.gitignore
+      - '**/.gitignore'
       - '**/*.sh'
       - '**/*.ps1'
 
