[OPIK-3211] [BE] [FE] Add span-level Python metrics scorer
- Backend: Implement OnlineScoringSpanUserDefinedMetricPythonScorer
  - Add span-level Python scorer service that consumes Redis stream messages
  - Extend OnlineScoringEngine to support span context (input, output, metadata)
  - Fix OnlineScoringSpanSampler to fetch both LLM and Python span evaluators
  - Add service toggle for span Python evaluator
  - Add stream configuration for span Python scoring
  - Add comprehensive unit tests and integration tests

- Frontend: Add UI support for span-level Python code rules
  - Add span_python_code rule type to types and schemas
  - Update AddEditRuleDialog to support span Python code rules
  - Add feature toggle for span Python code metrics
  - Update RunEvaluationDialog to include span Python code rules
  - Add default Python code template for span scope
  - Update helper functions for rule type/scope mapping

--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -307,6 +307,16 @@ onlineScoring:
       claimIntervalRatio: # Empty - will use global default
       pendingMessageDuration: # Empty - will use global default
       maxRetries: # Empty - will use global default
+    - scorer: span_user_defined_metric_python
+      streamName: stream_scoring_span_user_defined_metric_python
+      codec: java
+      # Optional per stream configuration (falls back to global if not specified)
+      poolingInterval: # Empty - will use global default
+      longPollingDuration: # Empty - will use global default
+      consumerBatchSize: # Empty - will use global default
+      claimIntervalRatio: # Empty - will use global default
+      pendingMessageDuration: # Empty - will use global default
+      maxRetries: # Empty - will use global default
 
 # LLM providers client configuration
 llmProviderClient:
@@ -407,6 +417,9 @@ serviceToggles:
   # Default: true
   # Description: Whether or not to enable the span LLM as Judge evaluator
   spanLlmAsJudgeEnabled: "false"
+  # Default: false
+  # Description: Whether or not to enable the span user-defined metric Python evaluator
+  spanUserDefinedMetricPythonEnabled: "false"
   # Default: false
   # Description: Whether or not OpikAI feature is enabled
   opikAIEnabled: "false"
