Claude Opus 4.5 support

--- a/tests_end_to_end/tests_end_to_end_ts/typescript-tests/models_config.yaml
+++ b/tests_end_to_end/tests_end_to_end_ts/typescript-tests/models_config.yaml
@@ -63,11 +63,11 @@ providers:
     display_name: "Anthropic"
     api_key_env_var: "ANTHROPIC_API_KEY"
     models:
-      - name: "Claude Opus 4.1"
-        ui_selector: "Claude Opus 4.1"
+      - name: "Claude Opus 4.5"
+        ui_selector: "Claude Opus 4.5"
         enabled: true
         test_playground: true
-        test_online_scoring: false
+        test_online_scoring: true
       - name: "Claude Sonnet 4.5"
         ui_selector: "Claude Sonnet 4.5"
         enabled: true
