[OPIK-3322] [BE][FE] Add Opik Built-in LLM Provider
Implement a system-managed 'Opik Built-in' LLM provider that allows
administrators to provide a pre-configured LLM model to users without
requiring them to set up their own API keys.

Backend changes:
- Add BuiltinLlmProviderConfig for environment-based configuration
- Add OPIK_BUILTIN provider type to LlmProvider enum
- Implement model name transformation (opik-builtin-model -> actual model)
- Expose actual model/provider via custom HTTP headers for span tracking
- Add virtual provider injection in API responses
- Add readOnly flag for system-managed providers
- Protect built-in provider from deletion
- Add CORS configuration for custom headers

Frontend changes:
- Add OPIK_BUILTIN provider type and model
- Add Opik icon for the built-in provider
- Filter built-in provider from setup dialog
- Use readOnly flag for edit/delete protection
- Capture actual model/provider from response headers for spans

Tests:
- Add LlmProviderApiKeyResourceBuiltinProviderTest integration tests
- Update LlmProviderFactoryTest for built-in provider scenarios

Implements OPIK-3322: Opik Default Provider

--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -705,3 +705,24 @@ webhook:
     # Default: 1s
     # Description: Maximum time to wait for acquiring metrics alert job lock
     metricsAlertJobLockWaitTimeout: ${WEBHOOK_METRICS_ALERT_JOB_LOCK_WAIT_TIMEOUT:-1s}
+
+# Built-in LLM Provider configuration
+# Note: The model name "opik-builtin-model" is hardcoded and cannot be changed.
+# This ensures backward compatibility with automation rules that store the model name.
+builtinLlmProvider:
+  # Default: false
+  # Description: Whether or not to enable the built-in LLM provider
+  enabled: ${BUILTIN_LLM_PROVIDER_ENABLED:-false}
+  # Default: gpt-4o-mini
+  # Description: Actual model name sent to the AI server (the underlying LLM)
+  actualModel: ${BUILTIN_LLM_PROVIDER_ACTUAL_MODEL:-gpt-4o-mini}
+  # Default: openai
+  # Description: Provider name stored in spans for cost tracking
+  spanProvider: ${BUILTIN_LLM_PROVIDER_SPAN_PROVIDER:-openai}
+  # Default: empty
+  # Description: API key for the OpenAI endpoint
+  apiKey: ${BUILTIN_LLM_PROVIDER_API_KEY:-}
+  # Default: empty
+  # Description: Base URL for OpenAI-compatible endpoint (empty for built-in OpenAI)
+  baseUrl: ${BUILTIN_LLM_PROVIDER_BASE_URL:-}
+
