--- a/apps/opik-frontend/package.json
+++ b/apps/opik-frontend/package.json
@@ -31,6 +31,7 @@
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/search": "^6.5.10",
+    "@dnd-kit/modifiers": "^8.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@lezer/highlight": "^1.2.1",
@@ -59,6 +60,7 @@
     "@tanstack/react-virtual": "^3.13.4",
     "@types/diff": "^5.2.2",
     "@types/md5": "^2.3.5",
+    "@types/react-grid-layout": "^1.3.6",
     "@types/segment-analytics": "^0.0.38",
     "@uiw/codemirror-extensions-hyper-link": "^4.25.1",
     "@uiw/codemirror-theme-github": "^4.23.3",
@@ -91,6 +93,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.5.1",
     "react-intersection-observer": "^10.0.0",
