[NA]: Add gitignore to infrastructure label (#4302)
* [NA]: Add gitignore to infrastructure label

Auto label, mark gitignore changes, as infrastructure label

* Update labeler.yml

Typo fix

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -69,6 +69,7 @@ Infrastructure:
       - 'deployment/**/*'
       - 'scripts/**/*'
       - 'extensions/**/*'
+      - '**/.gitignore'
       - '**/*.sh'
       - '**/*.ps1'
 
