[issue-3764] [P SDK] [FE] [BE] [Docs] Introduce experiment scoring functions (#3989)
* Hide experiment_scores columns in the single experiment table

* Add SDK support for experiment_scores

* Add SDK support for experiment_scores

* Add BE functionality

* Typescript autogenerated code

* Documentation and FE update

* Address PR comments

* Address PR comments

* Fix PR comments

* Address PR comments

* Fix merge conflicts

* Fix tests

* Fix failing tests

* Fix failing tests

* Fix UI colors and column names

* Refactor: Extract common score averaging logic to eliminate duplication

* Harmonize experiment scores sorting to use map access from CTE

- Add experiment_scores_agg LEFT JOIN to non-grouped queries
- Simplify SortingQueryBuilder to use coalesce(map[key]) instead of complex JSON extraction
- Remove special case handling for experiment_scores in null direction logic
- Addresses PR review comments about query harmonization

* Remove early return for empty test results in experiment scores

- Allow experiment score functions to handle empty test results
- Some functions may want to return baseline/default scores with no data
- Addresses PR review comment about preventing score function execution

* Add E2E test for experiment scores functionality

- Test verifies experiment scoring functions work end-to-end
- Validates experiment scores appear in evaluation result
- Validates experiment scores are retrievable via SDK API
- Uses compute_max_score function to test score aggregation
- Addresses PR review comment about E2E test coverage

* Enhance experiment score computation to handle empty test results gracefully

- Update condition to return empty list if either scoring functions or test results are absent
- Ensures robustness in score computation logic

* Add Python SDK E2E test for experiment scores

- Tests experiment_scoring_functions parameter in evaluate()
- Verifies experiment scores are computed and returned in result
- Validates scores are persiste

--- a/apps/opik-documentation/documentation/fern/openapi/opik.yaml
+++ b/apps/opik-documentation/documentation/fern/openapi/opik.yaml
@@ -9593,12 +9593,27 @@ components:
           - running
           - completed
           - cancelled
+        experiment_scores:
+          type: array
+          items:
+            $ref: "#/components/schemas/ExperimentScore"
         prompt_version:
           $ref: "#/components/schemas/PromptVersionLink"
         prompt_versions:
           type: array
           items:
             $ref: "#/components/schemas/PromptVersionLink"
+    ExperimentScore:
+      required:
+      - name
+      - value
+      type: object
+      properties:
+        name:
+          minLength: 1
+          type: string
+        value:
+          type: number
     PercentageValues:
       type: object
       properties:
@@ -9626,6 +9641,17 @@ components:
         prompt_name:
           type: string
           readOnly: true
+    ExperimentScore_Write:
+      required:
+      - name
+      - value
+      type: object
+      properties:
+        name:
+          minLength: 1
+          type: string
+        value:
+          type: number
     Experiment_Write:
       required:
       - dataset_name
@@ -9656,6 +9682,10 @@ components:
           - running
           - completed
           - cancelled
+        experiment_scores:
+          type: array
+          items:
+            $ref: "#/components/schemas/ExperimentScore_Write"
         prompt_version:
           $ref: "#/components/schemas/PromptVersionLink_Write"
         prompt_versions:
@@ -10299,6 +10329,17 @@ components:
           type: array
           items:
             type: string
+    ExperimentScore_Public:
+      required:
+      - name
+      - value
+      type: object
+      properties:
+        name:
+          minLength: 1
+          type: string
+        value:
+          type: number
     Experiment_Public:
       required:
       - dataset_name
@@ -10376,6 +10417,10 @@ components:
           - running
           - completed
           - cancelled
+        experiment_scores:
+          type: array
+          items:
+            $ref: "#/components/schemas/ExperimentScore_Public"
         prompt_version:
           $ref: "#/components/schemas/PromptVersionLink_Public"
         prompt_versions:
@@ -10452,6 +10497,10 @@ components:
         duration:
           $ref: "#/components/schemas/PercentageValues"
         feedback_scores:
+          type: array
+          items:
+            $ref: "#/components/schemas/FeedbackScoreAverage"
+        experiment_scores:
           type: array
           items:
             $ref: "#/components/schemas/FeedbackScoreAverage"
@@ -10547,6 +10596,10 @@ components:
           - running
           - completed
           - cancelled
+        experiment_scores:
+          type: array
+          items:
+            $ref: "#/components/schemas/ExperimentScore"
     BooleanFeedbackDefinition:
       required:
       - details
@@ -11822,6 +11875,8 @@ components:
       type: object
       properties:
         name:
+          type: string
+        type:
           type: string
     DataPointNumber_Public:
       required:
