--- a/apps/opik-frontend/package.json
+++ b/apps/opik-frontend/package.json
@@ -31,6 +31,7 @@
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/search": "^6.5.10",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^8.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.10.0",
