DND-131 run with docker-compose and opik-otel profile

--- a/apps/opik-frontend/nginx/nginx.conf
+++ b/apps/opik-frontend/nginx/nginx.conf
@@ -16,19 +16,11 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    # OpenTelemetry configuration
-    # This file is processed by envsubst at container startup to substitute environment variables
-    # Variables: OTEL_TRACE (on/off), OTEL_COLLECTOR_HOST, OTEL_COLLECTOR_PORT
-    
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for" '
                       '"$otel_trace_id"';
-
-    # Send access logs to OTel Collector via UDP syslog, and also to stdout for kubectl logs
-    # Note: Removed tag parameter as it may cause message truncation issues
-    access_log  /dev/stdout main;
 
     sendfile        on;
     keepalive_timeout  65;
@@ -36,6 +28,8 @@ http {
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
 
-    
-    
+    access_log  /dev/stdout main;
+    error_log  /dev/stdout error;
+    ${NGINX_EXTRA_ACCESS_LOG}
+    ${NGINX_EXTRA_ERROR_LOG}
 }
