--- a/deployment/docker-compose/nginx_default_local.conf
+++ b/deployment/docker-compose/nginx_default_local.conf
@@ -1,6 +1,7 @@
-
+client_max_body_size 2G;
 client_header_buffer_size 16k;
 large_client_header_buffers 4 64k;
+
 # Resolver allows nginx to re-resolve DNS periodically (every 30s)
 # This allows nginx to start even if backend service is not yet available
 # Docker's internal DNS resolver is typically at 127.0.0.11
@@ -13,23 +14,20 @@ upstream backend {
     keepalive 16;
 }
 server {
-    listen ${NGINX_PORT};
-    server_name localhost;
+    listen ${NGINX_PORT} default_server;
+    server_name _; # wildcard server name
     root /usr/share/nginx/html;
     index index.html;
-
 
     # Dedicated healthcheck endpoint
     # Returns 200 OK if nginx is running and can serve requests
     location /health {
         add_header Content-Type text/plain;
         access_log off;
+        otel_trace off;
         return 200 "healthy\n";
     }
-
-    # Increased to 2GB to support large CSV uploads (OPIK-3077)
-    client_max_body_size 2G;
-
+    
     location @api {
         rewrite /api/(.*) /$1  break;
         proxy_pass http://backend;
@@ -37,7 +35,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
+        proxy_set_header X-Trace-ID $otel_trace_id;
         proxy_read_timeout 90;
         proxy_connect_timeout 90;
         proxy_send_timeout 90;
@@ -54,5 +52,6 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
-
+    # Add trace ID header for OpenTelemetry
+    add_header X-Trace-ID $otel_trace_id;
 }
