DND-131 send errors to stderr

--- a/apps/opik-frontend/nginx/nginx.conf
+++ b/apps/opik-frontend/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     access_log  /dev/stdout main;
-    error_log  /dev/stdout error;
+    error_log  /dev/stderr error;
     ${NGINX_EXTRA_ACCESS_LOG}
     ${NGINX_EXTRA_ERROR_LOG}
 }
