--- a/deployment/helm_chart/opik/templates/deployment.yaml
+++ b/deployment/helm_chart/opik/templates/deployment.yaml
@@ -208,6 +208,11 @@ spec:
               subPath: {{ ternary $.Values.caCerts.overwriteJavaCATrustStore.subPath "cacerts" $.Values.caCerts.overwriteJavaCATrustStore.enabled }}
               mountPath: /etc/pki/ca-trust/extracted/java/cacerts
           {{- end }}
+          {{- if eq $key "frontend" }}
+          - name: {{ include "opik.name" $ }}-frontend-nginx
+            mountPath: /etc/nginx/templates
+            readOnly: true
+          {{- end }}
           {{- with $value.volumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
@@ -239,6 +244,11 @@ spec:
         - name: ca-trust-store
           emptyDir: {}
         {{- end }}
+      {{- end }}
+      {{- if eq $key "frontend" }}
+      - name: {{ include "opik.name" $ }}-frontend-nginx
+        configMap:
+          name: {{ include "opik.name" $ }}-frontend-nginx
       {{- end }}
       {{- with $value.volumes }}
         {{- toYaml . | nindent 8 }}
