--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -146,20 +146,32 @@ jobs:
           echo "$new_version" > version.txt
           echo "new_version=${new_version}" >> $GITHUB_OUTPUT
 
-      - name: Commit updated version file
+      - name: Update Chart.yaml with release version
         shell: bash
         run: |
+          set -x
+          cd deployment/helm_chart/opik
+          sed -i "s/^version:.*/version: ${{ needs.set-version.outputs.version }}/" Chart.yaml
+          sed -i "s/^appVersion:.*/appVersion: ${{ needs.set-version.outputs.version }}/" Chart.yaml
+          echo "Updated Chart.yaml version and appVersion to: ${{ needs.set-version.outputs.version }}"
+          cat Chart.yaml | grep -E "^version:|^appVersion:"
+          cd -
 
+      - name: Commit updated version file and Chart.yaml
+        shell: bash
+        run: |
           git config --local user.email "github-actions@comet.com"
           git config --local user.name "github-actions"
-          git commit -a -m "Update base version to ${{steps.update_version.outputs.new_version}}"
+          git add version.txt deployment/helm_chart/opik/Chart.yaml
+          git commit -m "Update base version to ${{steps.update_version.outputs.new_version}} and chart version to ${{ needs.set-version.outputs.version }}"
           echo "Version updated to ${{steps.update_version.outputs.new_version}} on main" >> $GITHUB_STEP_SUMMARY
+          echo "Chart.yaml updated to ${{ needs.set-version.outputs.version }} on main" >> $GITHUB_STEP_SUMMARY
 
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GH_PAT_TO_ACCESS_GITHUB_API }}
-          branch: ${{ github.ref }}
+          branch: main
           force_with_lease: true
 
   
