support for the FT on BE;

--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -424,6 +424,9 @@ serviceToggles:
   # Default: true for testing
   # Description: Whether or not dataset versioning feature is enabled
   datasetVersioningEnabled: "true"
+  # Default: false
+  # Description: Whether or not Optimization Studio feature is enabled
+  optimizationStudioEnabled: "false"
 
 # Trace Thread configuration
 traceThreadConfig:
