--- a/apps/opik-backend/config.yml
+++ b/apps/opik-backend/config.yml
@@ -565,6 +565,9 @@ serviceToggles:
   # Default: false
   # Description: Whether or not dataset versioning feature is enabled
   datasetVersioningEnabled: ${TOGGLE_DATASET_VERSIONING_ENABLED:-"false"}
+  # Default: false
+  # Description: Whether or not Optimization Studio feature is enabled
+  optimizationStudioEnabled: ${TOGGLE_OPTIMIZATION_STUDIO_ENABLED:-"false"}
 
 # Trace Thread configuration
 traceThreadConfig:
